--- a/FirstDemo/FirstDemo.Infrastructure/FirstDemo.Infrastructure.csproj
+++ b/FirstDemo/FirstDemo.Infrastructure/FirstDemo.Infrastructure.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.20" />
 	</ItemGroup>
 
 </Project>
