--- a/FirstDemo/FirstDemo.Web/Properties/launchSettings.json
+++ b/FirstDemo/FirstDemo.Web/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:28799",
-      "sslPort": 44342
+      "applicationUrl": "http://localhost:63102/",
+      "sslPort": 44382
     }
   },
   "profiles": {
