--- a/Demo/DemoLib/DemoLib.csproj
+++ b/Demo/DemoLib/DemoLib.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.4.3" />
+    <PackageReference Include="MimeKit" Version="3.4.3" />
+  </ItemGroup>
+
 </Project>
