--- a/Demo/DemoLib.Tests/DemoLib.Tests.csproj
+++ b/Demo/DemoLib.Tests/DemoLib.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extras.Moq" Version="6.1.0" />
     <PackageReference Include="MailKit" Version="3.4.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="MimeKit" Version="3.4.3" />
